Dodatno oblikovanje stranice
Dodavanje dvaju slika, uređivanje koda i popravak manjih greški.

--- a/index.html
+++ b/index.html
@@ -3,57 +3,67 @@
 
 <head>
 
-<title>Popis pjesama</title>
-<meta charset="utf-8"/>
+	<title>Popis pjesama</title>
+	<meta charset="utf-8"/>
 
 </head>
 
 <body>
 
-<h3>Moje najdraze pjesme</h3>
-<ol>
-<li>It's Peppa Pig</li>
-<li>Bing Bong Zoo</li>
-<li>Let's Get Ready!</li>
-<li>Expert Daddy Pig</li>
-<li>Rainbow, Rainbow</li>
-</ol>
+<h3>Moje najdraže pjesme</h3>
+	<ol>
+		<li>It's Peppa Pig</li>
+	</ol>
 
-<h3>Moje najgore pjesme</h3>
-<ul>
-<li>Super Potato's Theme</li>
-<li>Peppa and Friends</li>
-<li>The Class of Madame Gazelle</li>
-<li>Festival Fun!</li>
-<li>Jumping in Muddy Puddles</li>
-</ul>
+		<img src="pepa_1.png" alt="Pepo" height="200">
 
-<h3>Moje najdraza pjesma</h3>
+	<ol start="2">
+		<li>Bing Bong Zoo</li>
+	</ol>
+		
+		<img src="https://upload.wikimedia.org/wikipedia/en/6/61/Peppa_Pig.png" alt="Pepo">
+		
+	<ol start="3">
+		<li>Let's Get Ready!</li>
+		<li>Expert Daddy Pig</li>
+		<li>Rainbow, Rainbow</li>
+	</ol>
 
-<p><b>It's Peppa Pig</b></p>
+<h3>Moje najnedraže pjesme</h3>
+	<ul>
+		<li>Super Potato's Theme</li>
+		<li>Peppa and Friends</li>
+		<li>The Class of Madame Gazelle</li>
+		<li>Festival Fun!</li>
+		<li>Jumping in Muddy Puddles</li>
+	</ul>
 
-<p>
-As I walk through the valley of the shadow of death<br>
-I take a look at my life and realize there's not much left<br>
-'Coz I've been blastin' and laughin' so long, that<br>
-Even my mama thinks that my mind is gone<br>
-But I ain't never crossed a man that didn't deserve it<br>
-Me be treated like a punk you know that's unheard of<br>
-You better watch how you're talkin', and where you're walkin'<br>
-Or you and your homies might be lined in chalk<br>
-I really hate to trip but I gotta, loc<br>
-As I grow I see myself in the pistol smoke, fool<br>
-I'm the kinda G the little homies wanna be like<br>
-On my knees in the night, sayin' prayers in the streetlight<br><br>
-Been spendin' most their lives,<br>
-Livin' in the gangsta's paradise<br>
-Been spendin' most their lives,<br>
-Livin' in the gangsta's paradise<br>
-Keep spendin' most our lives,<br>
-Livin' in the gangsta's paradise<br>
-Keep spendin' most our lives,<br>
-Livin' in the gangsta's paradise<br>
-</p>
+<h3>Moja najdraža pjesma</h3>
+
+	<p><b>It's Peppa Pig</b></p>
+
+	<p>
+		As I walk through the valley of the shadow of death<br>
+		I take a look at my life and realize there's not much left<br>
+		'Coz I've been blastin' and laughin' so long, that<br>
+		Even my mama thinks that my mind is gone<br>
+		But I ain't never crossed a man that didn't deserve it<br>
+		Me be treated like a punk you know that's unheard of<br>
+		You better watch how you're talkin', and where you're walkin'<br>
+		Or you and your homies might be lined in chalk<br>
+		I really hate to trip but I gotta, loc<br>
+		As I grow I see myself in the pistol smoke, fool<br>
+		I'm the kinda G the little homies wanna be like<br>
+		On my knees in the night, sayin' prayers in the streetlight<br><br>
+		Been spendin' most their lives,<br>
+		Livin' in the gangsta's paradise<br>
+		Been spendin' most their lives,<br>
+		Livin' in the gangsta's paradise<br>
+		Keep spendin' most our lives,<br>
+		Livin' in the gangsta's paradise<br>
+		Keep spendin' most our lives,<br>
+		Livin' in the gangsta's paradise<br>
+	</p>
 
 </body>
 
