--- a/index.html
+++ b/index.html
@@ -12,21 +12,17 @@
 
 <h3>Moje najdraže pjesme</h3>
 	<ol>
-		<li>It's Peppa Pig</li>
+	<li>It's Peppa Pig</li>
 	</ol>
-
-		<img src="pepa_1.png" alt="Pepo" height="200">
-
+	<img src="pepa_1.png" alt="Pepo" height="200" style="margin:-10px 20px;">
 	<ol start="2">
-		<li>Bing Bong Zoo</li>
-	</ol>
-		
-		<img src="https://upload.wikimedia.org/wikipedia/en/6/61/Peppa_Pig.png" alt="Pepo">
-		
+	<li>Bing Bong Zoo</li>
+	</ol>	
+	<img src="https://upload.wikimedia.org/wikipedia/en/6/61/Peppa_Pig.png" alt="Pepo" style="margin:-10px 20px;">
 	<ol start="3">
-		<li>Let's Get Ready!</li>
-		<li>Expert Daddy Pig</li>
-		<li>Rainbow, Rainbow</li>
+	<li>Let's Get Ready!</li>
+	<li>Expert Daddy Pig</li>
+	<li>Rainbow, Rainbow</li>
 	</ol>
 
 <h3>Moje najnedraže pjesme</h3>
